Wed Apr 30 13:49:52 UTC 2008  Steve Huston  <shuston@riverace.com>

        * ace/UUID.cpp (get_timestamp_and_clocksequence): Case clock sequence
          value using ACE_UINT16 instead of u_char to prevent duplicates
          when many UUIDs are generated quickly. Thanks to Wim van den Boogaard
          for this fix. Resolves Bugzilla #3313.

Tue Apr 29 19:52:48 UTC 2008  Steve Huston  <shuston@riverace.com>

        * ace/Proactor.cpp: Simplify the timer_handler_ task spawn and
          shutdown. Also, if close() sees an error from the implementation's
          close, don't stop closing. Things are most likely already ripped
          apart too far to recover from, and it's likely to cause a hang to
          just try to stop closing now.

        * ace/POSIX_Asynch_IO.cpp: Correctly handle the ACE_Message_Block
          pointers passed to operations and later updating when complete.
          Thanks to Fernando C. Jeronymo <fernando dot fcavalcanti at
          gmail.com> for diagnosing this problem.

        * THANKS: Added Fernando C. Jeronymo to the Hall of Fame.

        * tests/Proactor_UDP_Test.cpp: Fix to close down correctly in
          half-duplex mode.

Tue Apr 29 19:12:53 UTC 2008  Jeff Parsons <j.parsons@vanderbilt.edu>

        * bin/MakeProjectCreator/config/ace_etcl_parser.mpb:

          Changed the path of the 'includes' line to match
          the new location of ETCL.

        * MonitorControl/Constraint_Interpreter.cpp:
        * MonitorControl/Constraint_Visitor.h:
        * MonitorControl/Constraint_Visitor.cpp:
        * MonitorControl/Constraint_Interpreter.h:

          Updated #includes to match the new location of ETCL.

        * MonitorControl/AutoUpdateStarter.h:

          Moved location of enabled monitors check, it was
          previous to any place it could see the #define in
          an included file.

        * MonitorControl/examples/Constraint/constraint.cpp:
        * MonitorControl/examples/CPU_Load/cpu_load.cpp: