@@ -20,7 +20,7 @@ namespace ACE
     MemoryUsageMonitor::MemoryUsageMonitor (const char* name)
       : Monitor_Base (name)
 #if defined (ACE_WIN32)
-      , WindowsMonitor (ACE_TEXT("\\Memory\\% Committed Bytes In Use"))
+      , WindowsMonitor (ACE_TEXT ("\\Memory\\% Committed Bytes In Use"))
 #elif defined (ACE_HAS_KSTAT)
 #endif
     {
